--- a/kv_files/custom_classes.kv
+++ b/kv_files/custom_classes.kv
@@ -1,1 +1,11 @@
 
+<RV>
+    viewclass: 'SelectableLabel'
+    SelectableRecycleBoxLayout:
+        default_size: None, dp(56)
+        default_size_hint: 1, None
+        size_hint_y: None
+        height: self.minimum_height
+        orientation: 'vertical'
+        multiselect: True
+        touch_multiselect: True
