--- a/kv_files/custom_classes.kv
+++ b/kv_files/custom_classes.kv
@@ -9,3 +9,45 @@
         orientation: 'vertical'
         multiselect: True
         touch_multiselect: True
+    
+<TextBox@RelativeLayout>
+    size_hint: None,None
+    width: min(dp(295), dp(root.parent.parent.width*0.69))
+    height: "75dp"
+    pos_hint: {"center_x": .5}
+    MDTextField:
+        id: text_field
+        color_mode: 'custom'
+        hint_text: 'Password'
+        mode: 'rectangle'
+        line_color_focus: "orange"
+        password: True
+        pos_hint: {"center_y": .5}
+        on_focus:
+            iconbtn.text_color = "orange" if text_field.focus == True else "grey"
+        
+
+    MDIconButton:
+        id: iconbtn
+        icon: "eye-off"
+        ripple_scale: .5
+        pos_hint: {"center_y": .5}
+        pos: text_field.width - self.width + dp(8), 0
+        theme_text_color: "Custom"
+        on_release:
+            self.icon = "eye" if self.icon == "eye-off" else "eye-off"
+            text_field.password = False if text_field.password is True else True
+            text_field.focus = True
+
+
+<FlatButton@MDRaisedButton>
+    theme_text_color: "Custom"
+    text_color: "white"
+    md_bg_color: "orange"
+
+<RectangleButton@MDRectangleFlatButton>
+    markup: True
+    text: "[b]SIGN UP[/b]"
+    theme_text_color: "Custom"
+    text_color: "orange"
+    line_color: "orange"
