--- a/kv_files/manager.kv
+++ b/kv_files/manager.kv
@@ -20,6 +20,13 @@
             file_icon: FD.file_icon
             items_bg_color: FD.tab_item_color
             items_div_color: FD.tab_nav_color 
+        
+        MDFloatingActionButton:
+            icon: "magnify" if nav_window.current_tab != 1 else "filter"
+            md_bg_color: "orange"
+            icon_color: "white"
+            pos_hint: {"center_y": 0.17, "center_x": 0.88}
+
     
     LogIn:
         id: login_signout
