updated profile and login pages

--- a/kv_files/manager.kv
+++ b/kv_files/manager.kv
@@ -25,13 +25,10 @@
             icon: "magnify" if nav_window.current_tab != 1 else "filter"
             md_bg_color: "orange"
             icon_color: "white"
-            pos_hint: {"center_y": 0.17, "center_x": 0.88}
+            pos_hint: {"center_x": 0.88}
+            y: "80dp"
 
     
-    LogIn:
-        id: login_signout
-        name: "login_signout"
-    
-    Profile:
-        name: "profile"
+    # Screen
+        #(you can put another screen class here)
                    
