--- a/kv_files/login_signout.kv
+++ b/kv_files/login_signout.kv
@@ -98,7 +98,7 @@
                         BoxLayout:
                             # For title spacing
                             orientation: "vertical"
-                            size_hint_y: .9 # cause a bug later
+                            size_hint_y: 1.5 # cause a bug later
                         BoxLayout:
                             orientation:'vertical'
                             spacing: '10dp'
